# MD-FH

./: .gitignore  CMakeLists.txt  README.md
gromacs_modified/: md.cpp  trajectory_writing.cpp
traj_reader/: read_traj_example.cpp  reader.hpp
water-trp-cage/: conf_2jof.gro  generate.sh  posre.itp  start-trp_cage.sh  topol_2jof.top
water-trp-cage/mdp/: eql.mdp  prd.mdp
water_pure/: build_reader.sh  driver.sh  read_traj.cpp  read_traj.plt  read_traj.py  start_all.sh
water_pure/mdp/: eql.mdp  min.mdp  prd.mdp
